[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/UI/main_menu/background.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/main_menu_btn.tres" type="Theme" id=3]
[ext_resource path="res://assets/themes/label.tres" type="Theme" id=4]

[sub_resource type="Animation" id=2]
resource_name = "loading_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="shadow" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.564706 )

[node name="Game_Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = 75.0
margin_right = 108.0
margin_bottom = 110.0
theme = ExtResource( 4 )
text = "Primary Target"

[node name="Screen_Menu" type="Control" parent="."]
anchor_right = 0.4
anchor_bottom = 0.5
margin_left = 230.0
margin_top = 146.0
margin_right = 536.0
margin_bottom = 212.0
focus_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button_Continue" type="Button" parent="Screen_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -135.0
margin_right = 100.0
margin_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "CONTINUAR"

[node name="Button_New_Game" type="Button" parent="Screen_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "NOVO JOGO"

[node name="Button_Load_Game" type="Button" parent="Screen_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -15.0
margin_right = 100.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "CARREGAR JOGO"

[node name="Button_Credits" type="Button" parent="Screen_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 45.0
margin_right = 100.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "CRÃ‰DITOS"

[node name="Button_Quit" type="Button" parent="Screen_Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 50.0
grow_vertical = 0
theme = ExtResource( 3 )
text = "Sair"

[node name="Screen_Saves" type="Control" parent="."]
visible = false
margin_left = 230.0
margin_top = 146.0
margin_right = 1048.0
margin_bottom = 572.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button_Save_1" type="Button" parent="Screen_Saves"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -75.0
margin_right = 50.0
margin_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "VAZIO"

[node name="Button_Save_2" type="Button" parent="Screen_Saves"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -15.0
margin_right = 50.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "VAZIO"

[node name="Button_Save_3" type="Button" parent="Screen_Saves"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 45.0
margin_right = 50.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "VAZIO"

[node name="Button_Back" type="Button" parent="Screen_Saves"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 115.0
grow_vertical = 0
theme = ExtResource( 3 )
text = "VOLTAR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loading_out = SubResource( 2 )

[connection signal="pressed" from="Screen_Menu/Button_Continue" to="." method="_on_Button_Continue_pressed"]
[connection signal="pressed" from="Screen_Menu/Button_New_Game" to="." method="_on_Button_New_Game_pressed"]
[connection signal="pressed" from="Screen_Menu/Button_Load_Game" to="." method="_on_Button_Load_Game_pressed"]
[connection signal="pressed" from="Screen_Menu/Button_Credits" to="." method="_on_Button_Credits_pressed"]
[connection signal="pressed" from="Screen_Menu/Button_Quit" to="." method="_on_Button_Quit_pressed"]
[connection signal="pressed" from="Screen_Saves/Button_Save_1" to="." method="_on_Button_Save_1_pressed"]
[connection signal="pressed" from="Screen_Saves/Button_Save_2" to="." method="_on_Button_Save_2_pressed"]
[connection signal="pressed" from="Screen_Saves/Button_Save_3" to="." method="_on_Button_Save_3_pressed"]
[connection signal="pressed" from="Screen_Saves/Button_Back" to="." method="_on_Button_Back_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
